...
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"
            />

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageView1"
            android:src="@drawable/com_facebook_button_icon_blue"
            android:scaleType="centerCrop"
            app:riv_corner_radius="0dip"
            app:riv_border_width="2dip"
            app:riv_border_color="#333333"
            app:riv_mutate_background="false"
...
